<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_layout"
    android:gravity="center"
    android:background="@color/Background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/bell"
        android:id="@+id/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ting"
        android:textAppearance="@style/Font"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/text_design"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/text_design"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/Font"
        android:hint="@string/name"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/pnone_no"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/text_design"
        android:ems="10"
        android:inputType="phone"
        android:textAppearance="@style/Font"
        android:hint="@string/mobile"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/text_design"
        android:textAppearance="@style/Font"
        android:ems="10"
        android:inputType="date"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/dob"
        android:layout_marginTop="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/text_design"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAppearance="@style/Font"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/Address"
        android:layout_marginTop="5dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:textColor="#000"
        android:textStyle=""
        android:textSize="18sp"
        android:background="#72ff70"
        android:onClick="open"/>
</LinearLayout>