<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentProfile"
    android:background="@color/Background"
    tools:context="anil.com.tingwork.Profile">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/anil"
        android:id="@+id/dp"
        android:contentDescription="logo"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="113dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/name"
        android:textAppearance="@style/profileText"
        android:layout_above="@+id/mobiletext"
        android:layout_toStartOf="@+id/dobtext" />

    <TextView
        android:id="@+id/nametext"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="33dp"
        android:text="@string/text"
        android:textAppearance="@style/profileText"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/mobile"
        android:textAppearance="@style/profileText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/mobiletext"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/text"
        android:textAppearance="@style/profileText"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/nametext" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/dob"
        android:textAppearance="@style/profileText"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:id="@+id/dobtext"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/text"
        android:textAppearance="@style/profileText"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/mobiletext" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/Address"
        android:textAppearance="@style/profileText"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView3" />

    <TextView
        android:id="@+id/addrssstext"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/text"
        android:textAppearance="@style/profileText"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userprofile"
        android:textAppearance="@style/profileText"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/dp"
        android:layout_alignEnd="@+id/dp"
        android:textColor="@color/userprofilecolor"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAppearance="@style/profileText"
        android:textStyle="italic"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>


</RelativeLayout>
